16-network-policies/pods-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    type: frontend
spec:
  containers:
    - name: frontend
      image: nginx
      resources: {}
      ports:
        - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    type: backend
spec:
  containers:
    - name: backend
      image: nginx
      resources: {}
      ports:
        - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    type: db
spec:
  containers:
    - name: db
      image: mongo
      resources: {}
      ports:
        - containerPort: 27017
