16-network-policies/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    type: frontend-svc
spec:
  type: NodePort
  selector:
    type: frontend
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    type: backend-svc
spec:
  type: NodePort
  selector:
    type: backend
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: db-svc
  labels:
    type: db-svc
spec:
  type: NodePort
  selector:
    type: db
  ports:
    - port: 27017
      targetPort: 27017
